# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/toolchain.gni")

if (use_custom_clang) {
  default_clang_base_path =
      "//prebuilts/clang/ohos/${host_platform_dir}/clang-9.0.0"
} else {
  default_clang_base_path = "${a_prebuilt_tools_path}/clang/host/${host_platform_dir}/clang-r353983c"
}

if (use_musl) {
  default_clang_base_path = "//prebuilts/clang/ohos/linux-x86_64/llvm"
}

declare_args() {
  # Indicates if the build should use the Chrome-specific plugins for enforcing
  # coding guidelines, etc. Only used when compiling with Clang.
  #clang_use_chrome_plugins = is_clang && !is_nacl && !use_xcode_clang
  clang_use_chrome_plugins = false

  clang_base_path = default_clang_base_path
}
