# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/toolchain.gni")

declare_args() {
  llvm_version = "12.0.1"
}

default_clang_base_path =
    "//prebuilts/clang/ohos/${host_platform_dir}/${llvm_version}/llvm"
clang_lib_path = "//prebuilts/clang/ohos/${host_platform_dir}/${llvm_version}/llvm/lib/clang/${llvm_version}/lib"

declare_args() {
  # Indicates if the build should use the Chrome-specific plugins for enforcing
  # coding guidelines, etc. Only used when compiling with Clang.
  #clang_use_chrome_plugins = is_clang && !is_nacl && !use_xcode_clang
  clang_use_chrome_plugins = false

  clang_base_path = default_clang_base_path

  clang_lib_base_path = clang_lib_path

  clang_stl_path = "//prebuilts/clang/ohos/${host_platform_dir}/${llvm_version}/libcxx-ndk/lib"
}
