# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.


if (is_ohos || is_chromeos) {
  import("//build/config/clang/clang.gni")
  import("//build/misc/overrides/build.gni")
  import("abi.gni")

  declare_args() {
    arm32_ndk_api_level = 29

    arm64_ndk_api_level = 29
  }

  if (is_double_framework) {
    default_base_libs_root = "${asdk_libs_dir}/ndk"
  } else {
    default_base_libs_root = ""
  }

  declare_args() {
    base_libs_root = default_base_libs_root
  }

  # Defines the name the ohos build gives to the current host CPU
  # architecture, which is different than the names GN uses.
  if (host_os == "linux") {
    ohos_host_os = "linux"
  } else if (host_os == "mac") {
    ohos_host_os = "darwin"
  } else {
    assert(false, "Need toolchain support for your build OS.")
  }

  arm_sysroot_subdir = "platforms/current/arch-arm"
  arm64_sysroot_subdir = ""
  x86_sysroot_subdir = ""
  x86_64_sysroot_subdir = ""

  if (current_cpu == "x86") {
    libclang_rt_file = ""
  } else if (current_cpu == "arm") {
    libclang_rt_file = "${clang_base_path}/lib64/clang/9.0.3/lib/linux/libclang_rt.builtins-arm-android.a"
  } else if (current_cpu == "x86_64") {
    libclang_rt_file = ""
  } else if (current_cpu == "arm64") {
    libclang_rt_file = ""
  } else {
    assert(false, "Need libgcc support for your target arch.")
  }
}
