group("rust_log") {
  deps = [
    # ":rust_log_rlib",
    # ":rust_log_dylib",
    ":rust_log_staticlib",
    # ":rust_log_cdylib",
  ]
}

rust_library("rust_log_rlib") {
  sources = [ "src/rlib.rs" ]
  crate_name = "rust_log_rlib"
  crate_type = "rlib"
}

rust_library("rust_log_dylib") {
  sources = [ "src/dylib.rs" ]
  crate_name = "rust_log_dylib"
  crate_type = "dylib"
}

static_library("rust_log_staticlib") {
  sources = [ "src/staticlib.rs" ]
  crate_name = "rust_log_staticlib"
  crate_type = "staticlib"
}

shared_library("rust_log_cdylib") {
  sources = [ "src/cdylib.rs" ]
  crate_name = "rust_log_cdylib"
  crate_type = "cdylib"
}
