# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("tests") {
  deps = [
    "test_bin_crate:test_bin_crate(${host_toolchain})",
    "test_cdylib_crate:test_cdylib_crate(${host_toolchain})",
    "test_dylib_crate:test_dylib_crate(${host_toolchain})",
    "test_proc_macro_crate:test_proc_macro_crate(${host_toolchain})",
    "test_static_link:test_static_link(${host_toolchain})",
  ]
  deps += [
    "//build/rust/tests/test_bin_crate",
    "//build/rust/tests/test_cdylib_crate",
    "//build/rust/tests/test_dylib_crate",
    "//build/rust/tests/test_idl",
    "//build/rust/tests/test_rlib_crate",
    "//build/rust/tests/test_static_link",
    "//build/rust/tests/test_staticlib_crate",
  ]
  deps += [ ":cargo_crate_test" ]
}

group("ohos_rust_xxxtest_tests") {
  testonly = true
  deps = [
    "test_rust_st:test_rust_st(${host_toolchain})",
    "test_rust_ut:test_rust_ut(${host_toolchain})",
    "//build/rust/tests/test_proc_macro_crate/test_derive_macro:test_derive_macro(${host_toolchain})",
    "//build/rust/tests/test_rust_st",
    "//build/rust/tests/test_rust_ut",
  ]
}

group("cargo_crate_test") {
  deps = [
    "test_bin_cargo_crate:test_bin_cargo_crate",
    "test_proc_macro_cargo_crate:test_proc_macro_cargo_crate(${host_toolchain})",
    "test_rlib_cargo_crate:test_rlib_crate_associated_bin",
  ]
}
